# terraform-ls-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  flake.nix  release-please-config.json  renovate.json  rust-toolchain.toml
.github/workflows/: ci.yml  release-please.yml  release.yml  scorecard.yml  vscode-publish.yml  vscode.yml
crates/tfls-cli/: Cargo.toml
crates/tfls-cli/src/: main.rs
crates/tfls-core/: Cargo.toml
crates/tfls-core/benches/: benchmarks.rs
crates/tfls-core/src/: builtin_blocks.rs  completion.rs  error.rs  git_ref.rs  lib.rs  lock_file.rs  meta_arguments.rs  named_values.rs  type_constraints.rs  types.rs  uri.rs  variable_type.rs  version_constraint.rs
crates/tfls-diag/: Cargo.toml
crates/tfls-diag/benches/: benchmarks.rs
crates/tfls-diag/src/: comment_syntax.rs  cyclic_locals.rs  deprecated_aws_alb.rs  deprecated_aws_renames.rs  deprecated_azurerm_blocks.rs  deprecated_google_blocks.rs  deprecated_index.rs  deprecated_interpolation.rs  deprecated_kubernetes_renames.rs  deprecated_lookup.rs  deprecated_null_data_source.rs  deprecated_null_resource.rs  deprecated_template_dir.rs  deprecated_template_file.rs  deprecated_vault_blocks.rs  deprecation_rule.rs  documented_outputs.rs  documented_variables.rs  duplicate_definition.rs  empty_list_equality.rs  error.rs  expr_walk.rs  for_each_unknown_keys.rs  git_source.rs  import_unknown_id.rs  lib.rs  lifecycle_literal.rs  map_duplicate_keys.rs  meta_arguments.rs  missing_tags.rs  module_graph.rs  module_mutable_ref.rs  module_outdated.rs  module_pinned_source.rs  module_ref_tag_mismatch.rs  module_shallow_clone.rs  module_version_presence.rs  naming_convention.rs  references.rs  required_providers_version.rs  (+13 more)
crates/tfls-format/: Cargo.toml
crates/tfls-format/src/: error.rs  lib.rs
crates/tfls-lsp/: Cargo.toml
crates/tfls-lsp/benches/: handlers.rs
crates/tfls-lsp/src/: backend.rs  blocking.rs  capabilities.rs  error.rs  indexer.rs  lib.rs  progress.rs
crates/tfls-lsp/src/handlers/: attr_ref_map.rs  code_action.rs  code_action_block_rename.rs  code_action_git_ref.rs  code_action_scope.rs  code_lens.rs  commands.rs  completion.rs  cursor.rs  diagnostic_provider_fn.rs  document.rs  document_link.rs  folding.rs  formatting.rs  highlight.rs  hover_attribute.rs  hover_function.rs  hover_module_input.rs  hover_named_value.rs  hover_type_constraint.rs  inlay_hints.rs  mod.rs  module_snapshot.rs  navigation.rs  rename.rs  search_docs.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  util.rs  version_prefetch.rs  workspace.rs
crates/tfls-lsp/tests/: code_action_quickfix.rs  completion.rs  diagnostics.rs  e2e.rs  folding.rs  highlight.rs  hover_attribute.rs  hover_function.rs  hover_named_value.rs  hover_type_constraint.rs  module_aware_open.rs  module_block.rs  navigation.rs  phase4.rs  rename.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  tftest_integration.rs  wire_diagnostics.rs  wire_formatting.rs  workspace.rs  workspace_lifecycle.rs
crates/tfls-lsp/tests/support/: mod.rs
crates/tfls-parser/: Cargo.toml
crates/tfls-parser/benches/: parsing.rs
crates/tfls-parser/src/: error.rs  fallback_references.rs  fallback_symbols.rs  json.rs  lib.rs  parse.rs  position.rs  references.rs  safe.rs  tfvars.rs  traversal.rs
crates/tfls-provider-protocol/: Cargo.toml  build.rs
crates/tfls-provider-protocol/examples/: cached_latest.rs  fetch_local.rs  probe.rs  single_fetch.rs
crates/tfls-provider-protocol/src/: client.rs  discovery.rs  git_refs.rs  handshake.rs  lib.rs  registry_catalog.rs  registry_docs.rs  registry_versions.rs  tls.rs  tool_versions.rs  translate.rs  translate_v5.rs
crates/tfls-provider-protocol/tests/: registry_docs_real.rs
crates/tfls-schema/: Cargo.toml
crates/tfls-schema/benches/: schema_parse.rs
crates/tfls-schema/src/: builtin_provider.rs  error.rs  fetcher.rs  functions.rs  functions_cache.rs  lib.rs  types.rs
crates/tfls-state/: Cargo.toml
crates/tfls-state/benches/: benchmarks.rs
crates/tfls-state/src/: config.rs  document.rs  error.rs  index_cache.rs  jobs.rs  lib.rs  lookup.rs  store.rs
crates/tfls-walker/: Cargo.toml
crates/tfls-walker/benches/: benchmarks.rs
crates/tfls-walker/src/: discovery.rs  error.rs  lib.rs  watcher.rs
docs/: audit-backlog.md  completion-backlog.md  diagnostics-backlog.md  notify-fsevents-research.md
editors/vscode/: .eslintrc.json  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  eslint.config.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: binaryManager.ts  extension.ts  platform.test.ts  platform.ts
editors/vscode/syntaxes/: NOTICE.md
scripts/: refresh-bundled-functions.sh
scripts/nvim-format-probe/: init.lua  run.sh  test.tf
