[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.7.1" # x-release-please-version
edition = "2021"
rust-version = "1.75"
license = "MPL-2.0"
repository = "https://github.com/ali/terraform-ls-rs"

[workspace.metadata.crane]
name = "terraform-ls-rs"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"

[workspace.dependencies]
# Error handling
thiserror = "2.0"

# Crypto
sha2 = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# LSP. tower-lsp is unmaintained and pins lsp-types 0.94; tower-lsp-server is
# the maintained fork and tracks the ls-types fork of lsp-types. We alias
# ls-types as `lsp_types` so existing `use lsp_types::…` keeps resolving, and
# keep `url::Url` for internal document identifiers (ls-types uses an opaque
# `Uri`; we convert only at the LSP boundary).
tower-lsp-server = "0.23"
lsp-types = { package = "ls-types", version = "0.0" }
url = { version = "2", features = ["serde"] }

# HCL parsing
hcl-edit = "0.9"

# HCL formatting backend.
tf-format = { git = "https://github.com/alisonjenkins/tf-format", tag = "v0.4.7" }

# Text buffers
ropey = "1.6"

# Concurrent data structures
dashmap = "6"

# Fast non-cryptographic hashing for server-internal HashMaps
# (per-call caches, etc.). Default `std::collections::HashMap`
# uses SipHash 1-3 — DOS-resistant but ~2-3× slower than FxHash
# on the short keys (Url / &'static str / PathBuf) we feed our
# caches. Cache keys are never untrusted user input, so the DOS
# resistance buys nothing. `rustc-hash` is the same FxHash impl
# rustc itself uses; tiny, well-maintained.
rustc-hash = "2"

# File watching
notify = "8"
notify-debouncer-full = "0.7"

# JSON (SIMD-accelerated)
sonic-rs = "0.5"

# Serde
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Compression (for bundled schemas)
flate2 = "1"

# Benchmarking
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

# Internal crates
tfls-core = { path = "crates/tfls-core" }
tfls-parser = { path = "crates/tfls-parser" }
tfls-schema = { path = "crates/tfls-schema" }
tfls-state = { path = "crates/tfls-state" }
tfls-lsp = { path = "crates/tfls-lsp" }
tfls-walker = { path = "crates/tfls-walker" }
tfls-diag = { path = "crates/tfls-diag" }
tfls-format = { path = "crates/tfls-format" }
tfls-provider-protocol = { path = "crates/tfls-provider-protocol" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.bench]
lto = "thin"
