[package]
name = "tfls-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "tfls"
path = "src/main.rs"

[[bin]]
name = "tfls-diag-dump"
path = "src/bin/diag_dump.rs"

[dependencies]
tfls-lsp.workspace = true
tfls-state.workspace = true
tfls-walker.workspace = true
tfls-schema.workspace = true
tfls-provider-protocol.workspace = true
lsp-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
