[package]
name = "tfls-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "tfls"
path = "src/main.rs"

[[bin]]
name = "tfls-diag-dump"
path = "src/bin/diag_dump.rs"

[[bin]]
name = "tfls-nav-probe"
path = "src/bin/nav_probe.rs"

[[bin]]
name = "tfls-infer-coverage"
path = "src/bin/infer_coverage.rs"

[[bin]]
name = "tfls-mux-probe"
path = "src/bin/mux_probe.rs"

[dependencies]
tfls-lsp.workspace = true
tfls-state.workspace = true
tfls-walker.workspace = true
tfls-schema.workspace = true
tfls-provider-protocol.workspace = true
tfls-core.workspace = true
hcl-edit.workspace = true
serde_json = "1"
lsp-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
