[package]
name = "tfls-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
lsp-types.workspace = true
serde.workspace = true
hcl-edit.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
serde_json = "1"
tower-lsp.workspace = true

[[bench]]
name = "benchmarks"
harness = false
