[package]
name = "tfls-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tfls-core.workspace = true
tfls-parser.workspace = true
tfls-state.workspace = true
tfls-diag.workspace = true
tfls-schema.workspace = true
tfls-format.workspace = true
tfls-walker.workspace = true
tfls-provider-protocol.workspace = true
thiserror.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
ropey.workspace = true
dashmap.workspace = true
hcl-edit.workspace = true
sonic-rs.workspace = true
serde.workspace = true
serde_json = "1"
rayon = "1"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
sonic-rs.workspace = true
tfls-schema.workspace = true
tfls-core.workspace = true
serde_json = "1"
tempfile = "3"
tower = "0.4"
futures = "0.3"
criterion.workspace = true

[[bench]]
name = "handlers"
harness = false
