[package]
name = "tfls-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tfls-core.workspace = true
thiserror.workspace = true
hcl-edit.workspace = true
ropey.workspace = true
lsp-types.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parsing"
harness = false
