[package]
name = "tfls-provider-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tokio = { workspace = true }
tracing = "0.1"
tonic = { version = "0.12", default-features = false, features = ["channel", "tls", "prost", "codegen"] }
prost = "0.13"
prost-types = "0.13"
tower = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs", "pem"] }
base64 = "0.22"
rmpv = "1"
sonic-rs.workspace = true
serde_json = "1"
tfls-schema = { path = "../tfls-schema" }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
