[package]
name = "tfls-provider-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tokio = { workspace = true }
tracing = "0.1"
tonic = { version = "0.12", default-features = false, features = ["channel", "tls", "prost", "codegen"] }
prost = "0.13"
prost-types = "0.13"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs", "pem"] }
base64 = "0.22"
rmpv = "1"
sonic-rs.workspace = true
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "gzip"] }
futures = "0.3"
regex = "1"
serde = { workspace = true }
semver = "1"
# Cross-platform user-cache directory (Linux/macOS/Windows).
dirs = "6"
tfls-schema = { path = "../tfls-schema" }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# pprof is Unix-only (Linux, macOS, *BSD). Gate the dep so Windows
# still builds the examples — the flamegraph feature in fetch_local
# is a no-op on non-Unix.
[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", default-features = false, features = ["flamegraph"] }
