[package]
name = "tfls-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tfls-core.workspace = true
tfls-parser.workspace = true
tfls-schema.workspace = true
thiserror.workspace = true
dashmap.workspace = true
ropey.workspace = true
lsp-types.workspace = true
tokio.workspace = true
tracing.workspace = true
sonic-rs.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
sonic-rs.workspace = true
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false
