[package]
name = "tfls-walker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tfls-core.workspace = true
tfls-state.workspace = true
thiserror.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false
